po: update po/fr_FR/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -6,6 +6,8 @@
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
+# Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Christophe BENZ <christophe.benz@gmail.com>, 2011
 # Christophe BENZ <christophe.benz@gmail.com>, 2011
 # fr rev <e2ffr02@hotmail.com>, 2015
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
@@ -15,13 +17,15 @@
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # reda <redasadki@gmail.com>, 2011
+# SR71 <ben.alard@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011, 2012
+# tonthon <tonthon21@gmail.com>, 2011-2012
 # Valerie Hartman <valeriehartman22@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"PO-Revision-Date: 2016-11-04 21:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -343,7 +347,7 @@ msgstr "Titre du modèle d'événement"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Créé par le contact ID"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
@@ -1270,7 +1274,7 @@ msgstr "Les tarifs d'inscription ne peuvent être inférieurs à zéro. Veuillez
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Veuillez choisir un mode de paiement."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -3658,7 +3662,7 @@ msgstr "Complet ?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
-msgstr ""
+msgstr "Événement dans le panier"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
@@ -3728,23 +3732,23 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Email"
-msgstr ""
+msgstr "Courriel du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Last Name"
-msgstr ""
+msgstr "Nom de famille du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To First Name"
-msgstr ""
+msgstr "Prénom du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
-msgstr ""
+msgstr "Transférer la réservation."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Veuillez saisir une adresse courriel valide."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
@@ -3760,7 +3764,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Merci"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
@@ -3842,11 +3846,11 @@ msgstr "Lettre PDF - Imprimer pour les participants"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
-msgstr ""
+msgstr "Contact pour l'événement (courriel)"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Phone)"
-msgstr ""
+msgstr "Contact pour l'événement (téléphone)"
 
 #: templates/CRM/Event/Form/EventFees.tpl
 msgid ""
@@ -3930,25 +3934,25 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Merci de participer."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr ""
+msgstr "Votre inscription a été reçue et vous êtes maintenant <strong> %1</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>waitlisted</strong>."
-msgstr ""
+msgstr "Votre inscription a été reçue. Vous figurez maintenant sur notre liste d'attente."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr ""
+msgstr "Votre inscription a été reçue et vous êtes maintenant <strong>inscrit</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3975,19 +3979,19 @@ msgstr ""
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to %1."
-msgstr ""
+msgstr "Votre inscription a été reçue et vous êtes maintenant %1."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to waitlisted."
-msgstr ""
+msgstr "Votre inscription a été reçue. Vous figurez maintenant sur notre liste d'attente."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to registered."
-msgstr ""
+msgstr "Votre inscription a été reçue. Vous êtes maintenant inscrit."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
@@ -4000,7 +4004,7 @@ msgstr ""
 
 #: xml/templates/message_templates/participant_transferred_html.tpl
 msgid "Your Event Registration has been Transferred to %1."
-msgstr ""
+msgstr "Votre réservation pour l'événement a été transférée  à %1."
 
 #: xml/templates/message_templates/participant_transferred_subject.tpl
 msgid "Event Registration Transferred for %1"
