po: update po/fr_FR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/pledge.po
+++ b/po/fr_FR/pledge.po
@@ -3,8 +3,11 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
+# LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -15,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"PO-Revision-Date: 2016-11-04 21:48+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -801,7 +804,7 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
-msgstr ""
+msgstr "Confirmation envoyée?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter a number"
