po: update po/fr_FR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -3,8 +3,10 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Ash_Crow <sylvainboissel@gmail.com>, 2012
 # SR71 <ben.alard@gmail.com>, 2012
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
+# ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Mathieu Lutfy <mathieu@bidon.ca>, 2016
 # matthias de mauroy <m.mauroy@cyim.com>, 2016
@@ -14,15 +16,18 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Quentin Renoux <quentin.renoux.layour@gmail.com>, 2015
 # Romain Thouvenin <romain.thouvenin@gmail.com>, 2016
+# SR71 <ben.alard@gmail.com>, 2012
 # Ash_Crow <sylvainboissel@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
+# tonthon <tonthon21@gmail.com>, 2011
+# Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
+"PO-Revision-Date: 2016-11-04 21:49+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -909,7 +914,7 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
-msgstr ""
+msgstr "Modifier son abonnement au groupe de diffusion"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
@@ -1220,11 +1225,11 @@ msgstr "Envoyer un message de test au groupe"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Envoyer à %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Un message test sera envoyé à %1 personnes :"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
@@ -1402,7 +1407,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Envoi..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
@@ -1470,7 +1475,7 @@ msgstr ""
 msgid ""
 "Alternatively, you may select a header or footer which includes the required"
 " tokens."
-msgstr ""
+msgstr "Alternativement, vous pouvez choisir une en-tête ou pied de page qui contiennent les champs de fusion obligatoires."
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
@@ -1488,7 +1493,7 @@ msgstr ""
 msgid ""
 "Based on current data, approximately %1 contacts will receive a copy of the "
 "mailing."
-msgstr ""
+msgstr "Selon les données actuelles, approximativement %1 contacts recevront une copie de cet envoi."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid "Below is a sample of the first %1 recipients."
@@ -1498,7 +1503,7 @@ msgstr ""
 msgid ""
 "If individual contacts are separately modified, added, or removed, then the "
 "final list may change."
-msgstr ""
+msgstr "Si des contacts sont modifiés, créés, ajoutés ou retirés du groupe avant le démarrage de l'envoi, alors la liste finale sera mise à jour en conséquence."
 
 #: ang/crmMailing/RadioDate.js
 msgid "The scheduled date and time is in the past"
@@ -1560,7 +1565,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Opt-Outs"
-msgstr ""
+msgstr "Demandes d'exclusion"
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
@@ -2334,7 +2339,7 @@ msgid ""
 "\"Public Pages\" will make the content of this mailing viewable everyone who"
 " has the permission \"view public CiviMail content\". Note that even people "
 "who did not receive the mailing would be able to find it via search engines."
-msgstr ""
+msgstr "En sélectionnant « pages publiques », les utilisateurs ayant la permission « voir le contenu CiviMail public » pourront consulter une archive de cet envoi massif sur le site web. Notez que les même les personnes qui n'ont pas reçu le message pourront le visualiser en utilisant un moteur de recherche."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2612,7 +2617,7 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
-msgstr ""
+msgstr "Total des ouvertures suivies"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
@@ -2638,7 +2643,7 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body (including"
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
-msgstr ""
+msgstr "NOTE: Lorsque cette option est activée, tous les liens dans le message (incluant les liens mailto) seront automatiquement ré-écrits pour être rediriger vers la page de comptage CiviCRM avant d'être redirigé vers la page de destination."
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Public url"
