--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 18:51+0000\n"
+"PO-Revision-Date: 2016-11-07 21:00+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -4692,7 +4692,7 @@ msgstr "Enregistrer votre site"
 msgid ""
 "Register your site, join the community, and help CiviCRM remain a leading "
 "CRM for organizations worldwide."
-msgstr ""
+msgstr "Enregistrez votre site, joignez-vous à la communauté et aidez CiviCRM à rester un CRM de premier plan pour les organisations du monde entier."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Viewing and Editing Contacts"
@@ -6690,11 +6690,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
-msgstr ""
+msgstr "Configurez CiviCRM pour votre pays et votre langue."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Default language (if any) for contact records."
-msgstr ""
+msgstr "Langue par défaut (le cas échéant) pour les enregistrements de contact."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
