--- a/po/fr_CA/countries.po
+++ b/po/fr_CA/countries.po
@@ -7,13 +7,14 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # Stéphane Lussier <stephane@koumbit.org>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-07 16:52+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1051,20 +1052,20 @@ msgstr "Saint-Martin (Antilles françaises)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Îles Vierges Britanniques"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Côte d’Ivoire"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran, République islamique"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Macédoine, République"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Territoire Palestinien"
