po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 14:28+0000\n"
+"PO-Revision-Date: 2016-11-07 15:22+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3662,7 +3662,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
-msgstr ""
+msgstr "Tillåt självbetjäning för avbokning och överlåtelse"
 
 #: CRM/Event/DAO/Event.php
 msgid "Self-service Cancellation or Transfer Time"
@@ -3678,7 +3678,7 @@ msgstr ""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
-msgstr ""
+msgstr "Tillåt självbetjäning för avbokning och överlåtelse?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Cancellation or transfer time limit (hours)"
@@ -3876,7 +3876,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Self-service Cancellation or Transfer?"
-msgstr ""
+msgstr "Tillåt självbetjäning för avbokning och överlåtelse?"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3902,7 +3902,7 @@ msgid ""
 "Number of hours prior to event start date to allow self-service cancellation"
 " or transfer. Enter 0 (or leave empty) to allow cancellation or transfer up "
 "until the event has started."
-msgstr ""
+msgstr "Antal timmar före arrangemangets starttid som självbetjäning för avbokning och överlåtelse ska vara möjligt. Välj 0 (eller tomt) för att tillåta det ända till arrangemangets start."
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "View this Participant"
