--- a/po/fr_CA/provinces.po
+++ b/po/fr_CA/provinces.po
@@ -11,14 +11,15 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-07 17:01+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15736,7 +15737,7 @@ msgstr "Phuket"
 
 msgctxt "province"
 msgid "Wake Island"
-msgstr ""
+msgstr "île de Wake"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
@@ -15748,20 +15749,20 @@ msgstr "Télangana"
 
 msgctxt "province"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Guadeloupe"
 
 msgctxt "province"
 msgid "Martinique"
-msgstr ""
+msgstr "Martinique"
 
 msgctxt "province"
 msgid "Guyane"
-msgstr ""
+msgstr "Guyane"
 
 msgctxt "province"
 msgid "La Réunion"
-msgstr ""
+msgstr "La Réunion"
 
 msgctxt "province"
 msgid "Mayotte"
-msgstr ""
+msgstr "Mayotte"
