--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 19:33+0000\n"
+"PO-Revision-Date: 2016-11-07 19:13+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -892,7 +892,7 @@ msgstr "Journal-Blog CiviCRM"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "CiviCRM Démarrer"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1347,7 +1347,7 @@ msgstr "Nouvelles CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Démarrer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
