--- a/po/it_IT/financial.po
+++ b/po/it_IT/financial.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-09 19:46+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +40,7 @@ msgstr "Ultima Modifica Da:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Strumento di Pagamento:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
@@ -467,7 +467,7 @@ msgstr "Il Conto Finanziario '%1' è stato salvato."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Financial Batch"
-msgstr ""
+msgstr "Batch Finanziario"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Accounting Batch"
@@ -1025,7 +1025,7 @@ msgstr ""
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Opening Balance"
-msgstr ""
+msgstr "Bilancio di Apertura"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Current period opening Balance"
@@ -1061,7 +1061,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
-msgstr ""
+msgstr "È un Pagamento?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
