po: update po/it_IT/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/pcp.po
+++ b/po/it_IT/pcp.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Massimo, 2015
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -10,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-09 22:56+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr "Dillo agli Amici"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "URL for this Page"
-msgstr ""
+msgstr "URL per questa Pagina"
 
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
@@ -150,7 +151,7 @@ msgstr "Una mail di notifica è stata inviata al sostenitore."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Email Sent"
-msgstr ""
+msgstr "Email Inviata"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
@@ -219,7 +220,7 @@ msgstr "Modifica la tua pagina di campagna personale"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Benvenuto"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -255,7 +256,7 @@ msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Notify me via email when someone donates to my page"
-msgstr ""
+msgstr "Notificami via email quando qualcuno fa una donazione sulla mia pagina"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
@@ -347,7 +348,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
-msgstr ""
+msgstr "Pagina Cancellata"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been disabled."
@@ -355,7 +356,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Disabled"
-msgstr ""
+msgstr "Pagina Disabilitata"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been enabled."
@@ -363,7 +364,7 @@ msgstr ""
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Enabled"
-msgstr ""
+msgstr "Pagina Abilitata"
 
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
@@ -662,7 +663,7 @@ msgstr ""
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "The current status of your page is"
-msgstr ""
+msgstr "Lo stato corrente della tua pagina è"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid ""
@@ -722,12 +723,12 @@ msgstr ""
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Updated personal campaign page"
-msgstr "Aggiorna la Pagina Personale della Campagna"
+msgstr "Pagina della campagna personale aggiornata"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "New personal campaign page"
-msgstr "Nuova Pagina Personale della Campagna"
+msgstr "Nuova Pagina della campagna personale"
 
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
@@ -747,7 +748,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Your fundraising total has been updated."
-msgstr ""
+msgstr "Il tuo totale della raccolta fondi è stato aggiornato."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
@@ -774,7 +775,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
-msgstr ""
+msgstr "La tua Pagina della campagna personale"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -818,7 +819,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Questions? Send email to"
-msgstr ""
+msgstr "Domande? Invia un email a"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -831,7 +832,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Please contact our site administrator for more information"
-msgstr ""
+msgstr "Per favore contatta il tuo amministratore del sito per maggiori informazioni"
 
 #: xml/templates/message_templates/pcp_status_change_subject.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_subject.tpl
