po: update po/it_IT/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/admin.po
+++ b/po/it_IT/admin.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-09 22:40+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6548,7 +6548,7 @@ msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Nascondi"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
