--- a/po/it_IT/provinces.po
+++ b/po/it_IT/provinces.po
@@ -6,6 +6,7 @@
 # Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
 # Andrea Ronchi <ronand@tiscali.it>, 2016
 # Antonio de Simone <desimone.webdesign@gmail.com>, 2012
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2011
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Luigi <luigi.bruno29@gmail.com>, 2015
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-09 20:26+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -10315,7 +10316,7 @@ msgstr "Cauca"
 
 msgctxt "province"
 msgid "Caazapl"
-msgstr "Catanzaro"
+msgstr "Caazapl"
 
 msgctxt "province"
 msgid "Canindeyu"
@@ -10323,7 +10324,7 @@ msgstr "Cabinda"
 
 msgctxt "province"
 msgid "Concepcion"
-msgstr "apri sezione"
+msgstr "Concepcion"
 
 msgctxt "province"
 msgid "Cordillera"
@@ -10395,55 +10396,55 @@ msgstr "Umm al-Qaywayn"
 
 msgctxt "province"
 msgid "Bucuresti"
-msgstr "Bururi"
+msgstr "Bucarest"
 
 msgctxt "province"
 msgid "Alba"
-msgstr "Albay"
+msgstr "Alba"
 
 msgctxt "province"
 msgid "Arad"
-msgstr "Arta"
+msgstr "Arad"
 
 msgctxt "province"
 msgid "Arges"
-msgstr "Età"
+msgstr "Arges"
 
 msgctxt "province"
 msgid "Bacau"
-msgstr "Bacucau"
+msgstr "Bacau"
 
 msgctxt "province"
 msgid "Bihor"
-msgstr "Bihar"
+msgstr "Bihor"
 
 msgctxt "province"
 msgid "Bistrita-Nasaud"
-msgstr "Bistrita-Nasaud"
+msgstr "Bistriţa-Nasaud"
 
 msgctxt "province"
 msgid "Boto'ani"
-msgstr "Booleano"
+msgstr "Botoşani"
 
 msgctxt "province"
 msgid "Bra'ov"
-msgstr "Brava"
+msgstr "Braşov"
 
 msgctxt "province"
 msgid "Braila"
-msgstr "Brasile"
+msgstr "Braila"
 
 msgctxt "province"
 msgid "Buzau"
-msgstr "Bubanza"
+msgstr "Buzau"
 
 msgctxt "province"
 msgid "Caras-Severin"
-msgstr "Caras-Severin"
+msgstr "Caraş-Severin"
 
 msgctxt "province"
 msgid "Ca la ras'i"
-msgstr "Cagliari"
+msgstr "Calaraşi"
 
 msgctxt "province"
 msgid "Cluj"
@@ -10451,23 +10452,23 @@ msgstr "Cluj"
 
 msgctxt "province"
 msgid "Constant'a"
-msgstr "Costantina"
+msgstr "Costanţa"
 
 msgctxt "province"
 msgid "Covasna"
-msgstr "Cosenza"
+msgstr "Covasna"
 
 msgctxt "province"
 msgid "Dambovit'a"
-msgstr "Cambogia"
+msgstr "Damboviţa"
 
 msgctxt "province"
 msgid "Dolj"
-msgstr "Devoll"
+msgstr "Dolj"
 
 msgctxt "province"
 msgid "Galat'i"
-msgstr "Balti"
+msgstr "Galaţi"
 
 msgctxt "province"
 msgid "Giurgiu"
@@ -10487,11 +10488,11 @@ msgstr "Hunedoara"
 
 msgctxt "province"
 msgid "Ialomit'a"
-msgstr "Ialomit'a"
+msgstr "Ialomiţa"
 
 msgctxt "province"
 msgid "Ias'i"
-msgstr "Ias'i"
+msgstr "Iaşi"
 
 msgctxt "province"
 msgid "Ilfov"
@@ -10499,19 +10500,19 @@ msgstr "Ilfov"
 
 msgctxt "province"
 msgid "Maramures"
-msgstr "Maramures"
+msgstr "Maramureş"
 
 msgctxt "province"
 msgid "Mehedint'i"
-msgstr "Mehedint'i"
+msgstr "Mehedinţi"
 
 msgctxt "province"
 msgid "Mures"
-msgstr "Mures"
+msgstr "Mureş"
 
 msgctxt "province"
 msgid "Neamt"
-msgstr "Neamt"
+msgstr "Neamţ"
 
 msgctxt "province"
 msgid "Olt"
@@ -10527,7 +10528,7 @@ msgstr "Satu Mare"
 
 msgctxt "province"
 msgid "Sa laj"
-msgstr "Sa laj"
+msgstr "Salaj"
 
 msgctxt "province"
 msgid "Sibiu"
@@ -10543,7 +10544,7 @@ msgstr "Teleorman"
 
 msgctxt "province"
 msgid "Timis"
-msgstr "Timis"
+msgstr "Timiş"
 
 msgctxt "province"
 msgid "Tulcea"
@@ -15555,59 +15556,59 @@ msgstr "Georgia - Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Harjumaa"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Ida-Virumaa"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Jõgevamaa"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Järvamaa"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Läänemaa"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Lääne-Virumaa"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Põlvamaa"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Pärnumaa"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Raplamaa"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Tartumaa"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Viljandimaa"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Võrumaa"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
@@ -15635,7 +15636,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataan"
 
 msgctxt "province"
 msgid "Al Bahah"
@@ -15731,7 +15732,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Wake Island"
@@ -15743,15 +15744,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
 
 msgctxt "province"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Guadalupa"
 
 msgctxt "province"
 msgid "Martinique"
-msgstr ""
+msgstr "Martinica"
 
 msgctxt "province"
 msgid "Guyane"
@@ -15759,8 +15760,8 @@ msgstr ""
 
 msgctxt "province"
 msgid "La Réunion"
-msgstr ""
+msgstr "La Riunione"
 
 msgctxt "province"
 msgid "Mayotte"
-msgstr ""
+msgstr "Mayotte"
