po: update po/it_IT/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/countries.po
+++ b/po/it_IT/countries.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Antonio de Simone <desimone.webdesign@gmail.com>, 2012
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # mitch.camp <kal-el@hotmail.it>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Riccardo <ricma40@gmail.com>, 2013
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-09 23:11+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -243,11 +244,11 @@ msgstr "Comore"
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
-msgstr "Repubblica democratica del Congo"
+msgstr "Congo, Repubblica democratica del"
 
 msgctxt "country"
 msgid "Congo, Republic of the"
-msgstr "Repubblica del Congo"
+msgstr "Congo, Repubblica del"
 
 msgctxt "country"
 msgid "Cook Islands"
@@ -451,7 +452,7 @@ msgstr "Indonesia"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic of"
-msgstr "Iran"
+msgstr "Iran, Repubblica Islamica di"
 
 msgctxt "country"
 msgid "Iraq"
@@ -511,7 +512,7 @@ msgstr "Kyrgyzstan"
 
 msgctxt "country"
 msgid "Lao People's Democratic Republic"
-msgstr "Lao, Repubblica Democratica Popolare"
+msgstr "Laos, Repubblica Democratica Popolare"
 
 msgctxt "country"
 msgid "Latvia"
@@ -1051,20 +1052,20 @@ msgstr "Saint Martin (Parte Francese)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Isole vergini, Britanniche"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Costa d'Avorio"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran, Repubblica Islamica di"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Macedonia, Repubblica di"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Palestina, Territorio della"
