--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-09 22:43+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -669,7 +669,7 @@ msgstr "O"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity Result - %1"
-msgstr ""
+msgstr "Risultato Attività - %1"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities which have Followup Activities"
@@ -757,7 +757,7 @@ msgstr "Oggetto"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity is a Test?"
-msgstr ""
+msgstr "L'attività è un test?"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Survey / Petition"
@@ -1161,11 +1161,11 @@ msgstr ""
 
 #: CRM/Activity/Form/Task/Batch.php CRM/Contact/Form/Task/Batch.php
 msgid "Updates Saved"
-msgstr ""
+msgstr "Aggiornamenti Salvati"
 
 #: CRM/Activity/Form/Task/Batch.php
 msgid "No Updates Saved"
-msgstr ""
+msgstr "Aggiornamenti Non Salvati"
 
 #: CRM/Activity/Form/Task/Delete.php CRM/Activity/Task.php
 msgid "Delete Activities"
@@ -1285,7 +1285,7 @@ msgstr ""
 
 #: CRM/Activity/Form/Task/PickProfile.php
 msgid "No Profile Configured"
-msgstr ""
+msgstr "Nessun Profilo Configurato"
 
 #: CRM/Activity/Form/Task/PickProfile.php
 msgid "Some of the selected activities are not editable."
@@ -6097,7 +6097,7 @@ msgstr "Menu WordPress"
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Hide Menu"
-msgstr ""
+msgstr "Nascondi Menu"
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Log out"
@@ -16781,7 +16781,7 @@ msgstr "È ora possibile trascinare le relazioni su le colonne a destra o a sini
 
 #: templates/CRM/Contact/Page/Dashboard.hlp
 msgid "Configuration"
-msgstr ""
+msgstr "Configurazione"
 
 #: templates/CRM/Contact/Page/Dashboard.hlp
 msgid ""
@@ -16881,7 +16881,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid "Duplicate Contacts"
-msgstr ""
+msgstr "Contatti Duplicati"
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -22552,11 +22552,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Formal"
-msgstr ""
+msgstr "Formale"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Familiar"
-msgstr ""
+msgstr "Familiare"
 
 #: xml/templates/civicrm_data.tpl
 msgid "User Preference"
@@ -22760,11 +22760,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "User account is no longer active"
-msgstr ""
+msgstr "L'account dell'utente non è più attivo"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Email address is not valid"
-msgstr ""
+msgstr "L'indirizzo email non è valido"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail routing error"
@@ -22784,7 +22784,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Error in SMTP transaction"
-msgstr ""
+msgstr "Errore nella transazione SMTP"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Name and Address"
@@ -22882,7 +22882,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Paid By"
-msgstr ""
+msgstr "Pagato da"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Member Since"
@@ -22910,7 +22910,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "On waitlist"
-msgstr ""
+msgstr "In lista d'attesa"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Awaiting approval"
@@ -26303,7 +26303,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Show/hide rows with the same data on each contact record."
-msgstr ""
+msgstr "Mostra/Nascondi righe con gli stessi dati in ogni record contatto"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
