--- a/po/ro_RO/contribute.po
+++ b/po/ro_RO/contribute.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# alice pop <aratyis@ndi.org>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-11 08:12+0000\n"
+"Last-Translator: alice pop <aratyis@ndi.org>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +20,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Contribution/Utils.php
 msgid "transaction already processed."
-msgstr ""
+msgstr "tranzacție deja procesată."
 
 #: CRM/Contribute/BAO/Contribution/Utils.php
 msgid "ContributionProcessor: %1 API"
@@ -4964,7 +4965,7 @@ msgstr ""
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Contribution Type"
-msgstr ""
+msgstr "Tipul contribuției"
 
 #: CRM/Contribute/ActionMapping/ByType.php
 msgid "Soft Credit Role"
