--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 22:02+0000\n"
+"PO-Revision-Date: 2016-11-11 15:25+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -24802,7 +24802,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
-msgstr ""
+msgstr "Skriv ut markerade rader"
 
 #: CRM/Activity/Task.php
 msgid "Export activities"
