--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 16:14+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-11-14 11:37+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1946,7 +1946,7 @@ msgid ""
 "Message&quot' is displayed when the maximum number of registrations is "
 "reached. Only participants with status types marked as 'counted' are "
 "included when checking if the event is full."
-msgstr "Altrament, quan s'hagi assolit el número màxim d'inscrits, el botó d'inscripció estarà ocult i es mostrarà el missatge &quot;L'esdeveniment està complet&quot'. Només quan els participants es marquin com a 'comptabilitzats' s'inclouran per comprobar si l'esdeveniment està complet."
+msgstr "Altrament, quan s'hagi aconseguit el número màxim d'inscrits, el botó d'inscripció estarà ocult i es mostrarà el missatge &quot;L'esdeveniment està complet&quot'. Només quan els participants es marquin com a 'comptabilitzats' s'inclouran per comprobar si l'esdeveniment està complet."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Event-Full Message"
