--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 13:48+0000\n"
+"PO-Revision-Date: 2016-11-14 15:22+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -284,7 +284,7 @@ msgstr "Això pot suposar la pèrdua d'una quantitat de dades substancial, i l'a
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Options"
-msgstr ""
+msgstr "Opcions"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl CRM/Pledge/Info.php
 #: CRM/Pledge/Page/DashBoard.php
@@ -1804,7 +1804,7 @@ msgstr "Import abans d'impostos"
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "Please print this confirmation for your records."
-msgstr ""
+msgstr "Imprimiu aquesta confirmació com a justificant."
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
