--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:14+0000\n"
+"PO-Revision-Date: 2016-11-14 22:08+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -20987,7 +20987,7 @@ msgstr "Contribució online o offline  "
 
 #: xml/templates/civicrm_data.tpl
 msgid "Membership Signup"
-msgstr "Alta de socis/es"
+msgstr "Alta de pertinença"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Online or offline membership signup."
@@ -21877,7 +21877,7 @@ msgstr "Report de la pàgina de campanya personal."
 msgid ""
 "Summarizes amount raised and number of contributors for each Personal "
 "Campaign Page."
-msgstr "Resumeix l'import assolit i el número de contribuïdors per a cada pàgina de campanya personal."
+msgstr "Resumeix l'import aconseguit i el número de contribuïdors per a cada pàgina de campanya personal."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Summary Report"
