--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 16:13+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-11-14 11:36+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -224,7 +224,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign is ongoing"
-msgstr ""
+msgstr "La campanya està en curs"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign starts on %1"
@@ -240,11 +240,11 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1 of %2"
-msgstr "%1 de %2 assolit"
+msgstr "Aconseguits %1 de %2"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Raised %1"
-msgstr "%1 assolit"
+msgstr "%1 aconseguit"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Donors"
