--- a/po/ca_ES/financial.po
+++ b/po/ca_ES/financial.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-14 11:02+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -223,15 +223,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Processor ID"
-msgstr ""
+msgstr "Identificador del processador de pagament"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Payment Processor Domain"
-msgstr ""
+msgstr "Domini del processador de pagament"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Description"
-msgstr ""
+msgstr "Descripció del processador"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
