po: update po/ca_ES/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/pcp.po
+++ b/po/ca_ES/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 16:36+0000\n"
+"PO-Revision-Date: 2016-11-14 11:36+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -695,7 +695,7 @@ msgstr "Objectiu"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "raised"
-msgstr "assolit"
+msgstr "aconseguit"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "HONOR ROLL"
