--- a/po/ca_ES/menu.po
+++ b/po/ca_ES/menu.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 16:01+0000\n"
+"PO-Revision-Date: 2016-11-14 11:37+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1944,7 +1944,7 @@ msgctxt "menu"
 msgid ""
 "Summarizes amount raised and number of contributors for each Personal "
 "Campaign Page."
-msgstr "Resumeix l'import assolit i el número de contribuïdors per a cada pàgina de campanya personal."
+msgstr "Resumeix l'import aconseguit i el número de contribuïdors per a cada pàgina de campanya personal."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
