--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 16:11+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-11-14 11:51+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17315,7 +17315,7 @@ msgstr "Eliminar %1 de %2? (elimina el contacto y elimina el registro de haber e
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "Smart Groups"
-msgstr "Grupos inteligentes."
+msgstr "Grupos inteligentes"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "Joining these group(s) is pending confirmation by this contact."
