--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -8,7 +8,7 @@
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
-# Mathieu Lutfy <mathieu@bidon.ca>, 2016
+# Mathieu Lu <mathieu@bidon.ca>, 2016
 # matthias de mauroy <m.mauroy@cyim.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -21,14 +21,15 @@
 # tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
+# Vincent Tercelin <vincent.tercelin@gmail.com>, 2016
 # Vincent <vincent.primault@gmail.com>, 2011
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-14 23:50+0000\n"
+"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1237,7 +1238,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "Le groupe est vide"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
@@ -1307,7 +1308,7 @@ msgstr "Réinscrire"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Publication"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
@@ -1581,19 +1582,19 @@ msgstr "Modèle (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr ""
+msgstr "De (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr ""
+msgstr "De (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
-msgstr ""
+msgstr "Répondre à (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (B)"
-msgstr ""
+msgstr "Répondre à (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
@@ -1616,11 +1617,11 @@ msgstr "Type de test"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
-msgstr ""
+msgstr "Distribution"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
-msgstr ""
+msgstr "Envoyer"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
