--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -21,6 +21,7 @@
 # tonthon <tonthon21@gmail.com>, 2011
 # Torrance Hodgson <torrance123@gmail.com>, 2015
 # Vincent <vincent.primault@gmail.com>, 2011
+# Vincent Tercelin <vincent.tercelin@gmail.com>, 2016
 # Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # Virginie Ganivet <virginie@cividesk.com>, 2015
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-14 23:51+0000\n"
+"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1593,7 +1594,7 @@ msgstr "Voir la contribution de"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Premium Product"
-msgstr ""
+msgstr "Produit premium"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "A product with this name already exists. Please select another name."
@@ -5295,11 +5296,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "New Payment Method"
-msgstr ""
+msgstr "Nouvelle méthode de paiement"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Edit Payment Method"
-msgstr ""
+msgstr "Mettre à jour la méthode de paiement"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Delete Payment Method"
