--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -23,7 +23,7 @@
 # jean-guy avelin <jga974@gmail.com>, 2013
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2011-2012,2014
+# Mathieu Lu <mathieu@bidon.ca>, 2011-2012,2014
 # Paul Caranton <caranton.paul@gmail.com>, 2013,2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -35,6 +35,7 @@
 # tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
+# Vincent Tercelin <vincent.tercelin@gmail.com>, 2016
 # Vincent <vincent.primault@gmail.com>, 2011,2014
 # Vincent <vincent.primault@gmail.com>, 2011
 # xavier <xa@sydesy.com>, 2013
@@ -44,8 +45,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-14 23:45+0000\n"
+"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26732,31 +26733,31 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 7 days including today"
-msgstr ""
+msgstr "Dernier 7 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 30 days including today"
-msgstr ""
+msgstr "Dernier 30 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 60 days including today"
-msgstr ""
+msgstr "Dernier 60 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 90 days including today"
-msgstr ""
+msgstr "Dernier 90 jours incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 12 months including today"
-msgstr ""
+msgstr "Dernier 12 mois incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 2 years including today"
-msgstr ""
+msgstr "2 dernières années incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Last 3 years including today"
-msgstr ""
+msgstr "3 dernières années incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
@@ -26796,7 +26797,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next 12 months including today"
-msgstr ""
+msgstr "Derniers 12 mois incluant aujourd'hui"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Current week to-date"
@@ -26856,7 +26857,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current week"
-msgstr ""
+msgstr "La fin de la semaine courante"
 
 #: xml/templates/civicrm_data.tpl
 msgid "To end of current calendar month"
