--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -8,7 +8,8 @@
 # JeanBlais <velorutioneer@gmail.com>, 2014
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2011,2013-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2016
+# Mathieu Lu <mathieu@bidon.ca>, 2011,2013-2016
 # Paul Tibere <paul@koumbit.org>, 2013
 # Paul Tibere <paul@koumbit.org>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-08 20:54+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-11-14 17:08+0000\n"
+"Last-Translator: Mathieu Lu <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18794,7 +18795,7 @@ msgstr "Nombre total de participants"
 
 #: templates/CRM/Price/Form/LineItem.tpl templates/CRM/Price/Page/LineItem.tpl
 msgid "Contribution Total"
-msgstr "Total de contributions"
+msgstr "Total de la contribution"
 
 #: templates/CRM/Price/Form/LineItem.tpl templates/CRM/Price/Page/LineItem.tpl
 msgid "Event Total"
