po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -26,6 +26,7 @@
 # ShevAbam, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
+# Vincent Tercelin <vincent.tercelin@gmail.com>, 2016
 # Vincent <vincent.primault@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
 # William Blondel <william.blondel@gmx.fr>, 2016
@@ -35,8 +36,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-15 00:04+0000\n"
+"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2285,7 +2286,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Dcumentations"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
@@ -2293,19 +2294,19 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
-msgstr ""
+msgstr "Support"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
-msgstr ""
+msgstr "%1: Reconnecter"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "Reconnecter"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
-msgstr ""
+msgstr "%1: Déconnecter"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
@@ -2315,11 +2316,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Déconnecté"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Nouvelle connexion"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2331,7 +2332,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "Application non disponible"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
@@ -2343,11 +2344,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Connection..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Connecté"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
@@ -2377,7 +2378,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
-msgstr ""
+msgstr "Ouverture..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
@@ -5003,7 +5004,7 @@ msgstr "Auteur"
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Version"
-msgstr ""
+msgstr "Version"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
@@ -5063,7 +5064,7 @@ msgstr "Il n'y a pas d'extension à afficher. Cliquez sur l'onglet « Ajouter »
 
 #: templates/CRM/Admin/Page/Extensions/Refresh.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Actualiser"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -5183,7 +5184,7 @@ msgstr "Les types d'adresse fournissent un moyen commode pour faire la différen
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Bounce Processing <strong>(Default)</strong>"
@@ -6462,7 +6463,7 @@ msgstr "Télécharger un document"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
-msgstr ""
+msgstr "Importer le document svp"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6518,15 +6519,15 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "The HTML message is a required field."
-msgstr ""
+msgstr "Le message HTML a ds champs requis."
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Language for users"
-msgstr ""
+msgstr "Langue par default des utilisateurs"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Use default site language"
-msgstr ""
+msgstr "Utilise la langue d site par défault"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Leave undefined"
@@ -6700,7 +6701,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
-msgstr ""
+msgstr "Paramétrer CiviCRM pour votre pays et langue."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Default language (if any) for contact records."
