--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 22:08+0000\n"
+"PO-Revision-Date: 2016-11-15 09:21+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -23287,7 +23287,7 @@ msgstr "Pertinences - Actualitzacions de facturació de renovació automàtica"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Test-drive - Receipt Header"
-msgstr "Prova pilot - Encapçalament de rebut"
+msgstr "Pàgina de proves - Encapçalament de rebut"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Pledges - Acknowledgement"
