po: update po/ca_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 11:37+0000\n"
+"PO-Revision-Date: 2016-11-15 09:22+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2528,7 +2528,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "test-drive"
-msgstr ""
+msgstr "prova"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
@@ -2564,7 +2564,7 @@ msgstr "Registra un participant"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Test-drive)"
-msgstr "Registre en línia (test)"
+msgstr "Registre en línia (prova)"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Live)"
