po: update po/ca_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 11:36+0000\n"
+"PO-Revision-Date: 2016-11-15 09:24+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1323,7 +1323,7 @@ msgstr "Imports "
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 msgid "Include Profiles"
-msgstr "Incloure perfils"
+msgstr "Inclou perfils"
 
 #: CRM/Contribute/Form/ContributionPage/Custom.php
 msgid ""
@@ -2135,7 +2135,7 @@ msgstr "Esteu segur que voleu fer una còpia d'aquesta pàgina de contribució?"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Make a Copy"
-msgstr ""
+msgstr "Fes una copia"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Make a Copy of CiviCRM Contribution Page"
@@ -2151,16 +2151,16 @@ msgstr "Giny de contribució"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Live Page"
-msgstr "Pàgina en directe "
+msgstr "Pàgina real"
 
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Current Month-To-Date"
-msgstr "Data actual"
+msgstr "Aquest mes fins avui"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Fiscal Year-To-Date"
-msgstr ""
+msgstr "Aquest any fiscal fins avui"
 
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
@@ -4401,7 +4401,7 @@ msgstr "Feu clic a <a href='%1'>nova pàgina de contribució</a> per a crear i c
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Add Contribution Page"
-msgstr "Afegir pàgina de contribució"
+msgstr "Afegeix una pàgina de contribució"
 
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
 msgid ""
@@ -4515,7 +4515,7 @@ msgstr "Ver detalls "
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Current Fiscal Year-To-Date"
-msgstr "Any Fiscal en Curs"
+msgstr "Aquest any fiscal fins avui"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Contribution Summary"
