po: update po/ca_ES/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-components.po
+++ b/po/ca_ES/common-components.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 15:22+0000\n"
+"PO-Revision-Date: 2016-11-15 09:21+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1023,13 +1023,13 @@ msgstr "targeta de crèdit "
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 #: templates/CRM/Event/Form/Registration/PreviewHeader.tpl
 msgid "Test-drive"
-msgstr "Proveu"
+msgstr "Pàgina de proves"
 
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Cumulative"
-msgstr "Acumulatius"
+msgstr "Acumulatiu"
 
 #: CRM/Contribute/Page/Tab.php CRM/Member/Page/Tab.php
 msgid "Change Billing Details"
