--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 16:02+0000\n"
+"PO-Revision-Date: 2016-11-17 08:28+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -852,7 +852,7 @@ msgstr "Estadístiques d'imports de contribució"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contribution Avg"
-msgstr ""
+msgstr "Mitjana de contribucions"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credit Amount Stats"
@@ -864,7 +864,7 @@ msgstr "Acumulat de crèdits"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credit Avg"
-msgstr "Promedi de crèdits "
+msgstr "Mitjana de crèdits tous"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credits Count"
