po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 12:13+0000\n"
+"PO-Revision-Date: 2016-11-17 10:33+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -5440,7 +5440,7 @@ msgstr "Documentació de la API"
 msgid ""
 "CiviCRM is pre-configured with standard options for individual gender (Male,"
 " Female, Transgender). Modify these options as needed for your installation."
-msgstr ""
+msgstr "CiviCRM està pre-configurat amb les opcions estàndards de gènere (Masculí, Femení i Transgènere). Es poden modificar aquestes opcions en funció de les necessitats."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
