po: update po/ca_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 09:24+0000\n"
+"PO-Revision-Date: 2016-11-17 08:27+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -4432,7 +4432,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Avg Soft Credits"
-msgstr "Promedi de crèdits"
+msgstr "Mitjana de crèdits tous"
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Personal Campaign Page?"
@@ -4461,11 +4461,11 @@ msgstr "# Contribucions finalitzades"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg Amount"
-msgstr "Import medi"
+msgstr "Import mitjà"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Total Cancelled Amount"
-msgstr "Total contribucions cancel·lades"
+msgstr "Total de contribucions cancel·lades"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed Soft Credits"
@@ -4473,7 +4473,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg Soft Credit Amount"
-msgstr ""
+msgstr "Import mità de crèdits tous"
 
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 msgid ""
@@ -5292,7 +5292,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
-msgstr ""
+msgstr "Clica la fletxa per veure els detalls de pagament."
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Total Cancelled Soft Credits"
@@ -5304,7 +5304,7 @@ msgstr "# Completats"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg"
-msgstr ""
+msgstr "Mitjana"
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
