po: update po/mk/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/mk/common-base.po
+++ b/po/mk/common-base.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Dimce Grozdanoski <dimce.grozdanoski@gmail.com>, 2011
+# Jordan Jovanov <jovanovjoce@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-17 06:57+0000\n"
+"Last-Translator: Jordan Jovanov <jovanovjoce@gmail.com>\n"
 "Language-Team: Macedonian (http://www.transifex.com/civicrm/civicrm/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22827,23 +22828,23 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Street Address (Home)"
-msgstr ""
+msgstr "Улица и број"
 
 #: xml/templates/civicrm_data.tpl
 msgid "City (Home)"
-msgstr ""
+msgstr "Град"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Postal Code (Home)"
-msgstr ""
+msgstr "Поштенски број"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Country (Home)"
-msgstr ""
+msgstr "Држава"
 
 #: xml/templates/civicrm_data.tpl
 msgid "State (Home)"
-msgstr ""
+msgstr "Покраијна"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Home Phone"
