po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 12:07+0000\n"
+"PO-Revision-Date: 2016-11-22 13:39+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -30,17 +30,17 @@ msgstr "Nova kampanja"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Survey"
-msgstr ""
+msgstr "Nova anketa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Conduct Survey"
-msgstr ""
+msgstr "Sprovedi anketu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Types"
-msgstr ""
+msgstr "Tipovi anketa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -103,11 +103,11 @@ msgstr "Hvala"
 
 msgctxt "menu"
 msgid "Configure Survey"
-msgstr ""
+msgstr "Konfiguracija ankete"
 
 msgctxt "menu"
 msgid "Delete Survey"
-msgstr ""
+msgstr "Obriši anketu"
 
 msgctxt "menu"
 msgid "CiviCase Dashboard"
@@ -832,7 +832,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Contact Summary"
-msgstr ""
+msgstr "Kontakt - kratak pregled"
 
 msgctxt "menu"
 msgid "Delete Contact"
@@ -1497,7 +1497,7 @@ msgstr "Kampanje"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Surveys"
-msgstr ""
+msgstr "Ankete"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2140,7 +2140,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Details"
-msgstr ""
+msgstr "Anketa - detalji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
